--- a/app/views/blogit/posts/_form.html.erb
+++ b/app/views/blogit/posts/_form.html.erb
@@ -1,43 +1,25 @@
-<%= form_for(@post, html: {class: "new_blog_post", id: "new_blog_post"}) do |f| %>
+<%= comfy_form_for(@post, html: {class: "new_blog_post", id: "new_blog_post"}) do |f| %>
 
-  <% if @post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%=t :prohibited_this_post_from_being_saved, scope: 'blogit.posts', count: @post.errors.count%></h2>
+  <%= f.text_field :title, placeholder: t(:give_your_post_a_title, scope: 'blogit.posts') %>
+  <%= f.text_area :body, placeholder: t(:write_something_here, scope: 'blogit.posts'), :"data-rich-text" => 'true' %>
 
-      <ul>
-        <% @post.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+  <!--
   <fieldset>
-    <%= field do %>
-      <%= f.text_field :title, placeholder: t(:give_your_post_a_title, scope: 'blogit.posts') %>
-    <% end %>
-
-    <%= field do %>
-      <%= f.text_area :body, placeholder: t(:write_something_here, scope: 'blogit.posts'), :"data-rich-text" => 'true' %>
-    <% end %>
-  </fieldset>
-
-  <fieldset>
-
-    <%= field id: "new_blog_post_tag_field" do %>
-      <%= f.label :tag_list, t(:tags, scope: 'blogit.posts') %>
-      <%= f.text_field :tag_list, placeholder: t(:tag_placeholder, scope: 'blogit.posts') %>
-    <% end %>
+    <%# field id: "new_blog_post_tag_field" do %>
+      <%# f.label :tag_list, t(:tags, scope: 'blogit.posts') %>
+      <%# f.text_field :tag_list, placeholder: t(:tag_placeholder, scope: 'blogit.posts') %>
+    <%# end %>
 
     <p class="blog_post_tip">
-      <%=t :tip_you_can_style_your_post_using, scope: 'blogit.posts', parser: blogit_conf.default_parser %>
+      <%#t :tip_you_can_style_your_post_using, scope: 'blogit.posts', parser: blogit_conf.default_parser %>
     </p>
-
   </fieldset>
+  -->
+  <%= f.select :type_id, Blogit::Type.to_options %>
 
-  <%= actions do %>
+  <div class="form-actions">
     <%= f.submit %> <%=t :or, scope: 'blogit.posts'%>
-    <%= link_to(t(:cancel, scope: 'blogit.posts'), @post.new_record? ? blog_root_path : post_path(@post)) %>
-  <% end %>
+    <%= link_to(t(:cancel, scope: 'blogit.posts'), blog_root_path)  %>
+  </div>
 
 <% end %>
