--- a/app/views/blogit/posts/_post_links.html.erb
+++ b/app/views/blogit/posts/_post_links.html.erb
@@ -1,5 +1,8 @@
 <%= login_required do  %>
   <%= actions do %>
-    <%= link_to(t(:edit, scope: 'blogit.posts'), edit_post_path(post)) %> | <%= link_to(t(:delete, scope: 'blogit.posts'), post, method: :delete, confirm: t(:are_you_sure_you_want_to_remove_this_post, scope: 'blogit.posts')) %>
+    <div class="btn-group">
+      <%= link_to(t(:edit, scope: 'blogit.posts'), edit_post_path(post), class: 'btn btn-small') %>
+      <%= link_to(t(:delete, scope: 'blogit.posts'), post, method: :delete, confirm: t(:are_you_sure_you_want_to_remove_this_post, scope: 'blogit.posts'), class:'btn btn-small btn-danger') %>
+    </div>
   <% end %>
 <% end unless blogit_conf.author_edits_only and not this_blogger?(post) %>
