--- a/app/views/blogit/posts/index.html.erb
+++ b/app/views/blogit/posts/index.html.erb
@@ -1,5 +1,5 @@
 <%= login_required class: "actions", id: "new_blog_post_link" do %>
-  <%= link_to t(:new_article, scope: 'blogit.posts'), new_post_path %>
+  <%= link_to t(:new_article, scope: 'blogit.posts'), new_post_path, class:'btn btn-primary' %>
 <% end %>
 
 <% if @posts.any? %>
@@ -7,7 +7,7 @@
   <%= render partial: "blogit/posts/post",
     collection: @posts,
     spacer_template: "blog_post_spacer",
-    locals: {show_comments_count: (Blogit.configuration.include_comments == :active_records) }  %>
+    locals: {for_index: true, show_comments_count: (Blogit.configuration.include_comments == :active_records) }  %>
 <% else %>
 
   <%= render partial: "blogit/posts/empty" %>
