--- a/app/views/blogit/posts/_post.html.erb
+++ b/app/views/blogit/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<% if defined?(for_index) and for_index %>
+<% if defined?(for_index) and for_admin_index %>
   <%= content_tag(:article, id: "blog_post_#{post.id}", class: "blog_post_gist") do %>
     <%= render "blogit/posts/blogger_information", post: post %>
     <%= render "blogit/posts/post_head", post: post %>
@@ -9,14 +9,13 @@
   <%= content_tag(:article, id: "blog_post_#{post.id}", class: "blog_post") do %>
     <%# Render the header for this blog post %>
     <%= render "blogit/posts/post_head", post: post %>
-    <%# Render the body of this blog post (as Markdown) %>
+    <%# Render the body of this blog post %>
     <%= render "blogit/posts/post_body", post: post %>
     <%# Render admin links to edit/delete this post %>
     <%= render "blogit/posts/post_links", post: post %>
     <%# Render info about the person who wrote this post %>
     <%= render "blogit/posts/blogger_information", post: post %>
     <%# Render the no. of comments %>
-    <%= render "blogit/posts/comments_count",
-      post: post if defined?(show_comments_count) and show_comments_count %>
+    <%#= render "blogit/posts/comments_count", post: post if defined?(show_comments_count) and show_comments_count %>
   <% end %>
 <% end %>
