--- a/app/views/blogit/posts/_post_links.html.erb
+++ b/app/views/blogit/posts/_post_links.html.erb
@@ -1,6 +1,6 @@
 <% if can? :manage, Blogit::Post %>
   <%= actions do %>
-    <div class="btn-group">
+    <div class="btn-group edit_links">
       <%= link_to(t(:edit, scope: 'blogit.posts'), edit_post_path(post), class: 'btn btn-small') %>
       <%= link_to(t(:delete, scope: 'blogit.posts'), post, method: :delete, confirm: t(:are_you_sure_you_want_to_remove_this_post, scope: 'blogit.posts'), class:'btn btn-small btn-danger') %>
     </div>
