--- a/app/views/blogit/posts/_form.html.erb
+++ b/app/views/blogit/posts/_form.html.erb
@@ -3,18 +3,13 @@
   <%= f.text_field :title, placeholder: t(:give_your_post_a_title, scope: 'blogit.posts') %>
   <%= f.text_area :body, placeholder: t(:write_something_here, scope: 'blogit.posts'), :"data-rich-text" => 'true' %>
 
-  <!--
   <fieldset>
-    <%# field id: "new_blog_post_tag_field" do %>
-      <%# f.label :tag_list, t(:tags, scope: 'blogit.posts') %>
-      <%# f.text_field :tag_list, placeholder: t(:tag_placeholder, scope: 'blogit.posts') %>
-    <%# end %>
-
-    <p class="blog_post_tip">
-      <%#t :tip_you_can_style_your_post_using, scope: 'blogit.posts', parser: blogit_conf.default_parser %>
-    </p>
+    <%= field id: "new_blog_post_tag_field" do %>
+      <%= f.label :tag_list, t(:tags, scope: 'blogit.posts') %>
+      <%= f.text_field :tag_list, placeholder: t(:tag_placeholder, scope: 'blogit.posts') %>
+    <% end %>
   </fieldset>
-  -->
+
   <%= f.select :type_id, Blogit::Type.to_options %>
 
   <div class="form-actions">
