--- a/app/views/blogit/posts/index.html.erb
+++ b/app/views/blogit/posts/index.html.erb
@@ -25,16 +25,16 @@
   </div>
 
   <% if @posts.any? %>
-
-    <%= render partial: "blogit/posts/post",
-      collection: @posts,
-      spacer_template: "blog_post_spacer",
-      locals: {for_admin_index: true, show_comments_count: (Blogit.configuration.include_comments == :active_records) }  %>
+    <table class="articles table table-hover table-bordered">
+      <tbody>
+        <tr>
+          <%= render partial: "blogit/posts/post", collection: @posts,
+            locals: {for_admin_index: true, show_comments_count: (Blogit.configuration.include_comments == :active_records) }  %>
+        </tr>
+      </tbody>
+    </table>
   <% else %>
-
     <%= render partial: "blogit/posts/empty" %>
-
   <% end %>
-
   <%= render "pagination" %>
 <% end %>
