Allow previewing of un-published posts.

--- a/app/views/blogit/posts/_form.html.erb
+++ b/app/views/blogit/posts/_form.html.erb
@@ -20,7 +20,7 @@
     <% end %>
     </div>
   </div>
-  <%= f.check_box :is_published, :label => 'Publish' %>
+  <%= f.check_box :is_published, :label => 'Published' %>
 
   <div class="form-actions">
     <%= f.submit %> <%=t :or, scope: 'blogit.posts'%>
