--- a/app/views/blogit/posts/_post_head.html.erb
+++ b/app/views/blogit/posts/_post_head.html.erb
@@ -1,3 +1,3 @@
 <%= blog_tag :header do %>
-  <%= content_tag(:h5, link_to(post.title, post)) %>
+  <%= content_tag(:h5, link_to(post.title, article_path(post, preview:true))) %>
 <% end %>
